# starterCUDA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6b3a4bd2f08317e04edd6f217f894812.html  dir_6b3a4bd2f08317e04edd6f217f894812.js  dir_dd800d30a282d9d93d2bd64f3bb3e624.html  dir_dd800d30a282d9d93d2bd64f3bb3e624.js  files.html  index.html  kernel_8cpp.html  kernel_8cpp.js  kernel_8hpp.html  kernel_8hpp.js  kernel_8hpp_source.html  main_8cpp.html  navtreedata.js  navtreeindex0.js  testLib_8cpp.html  testLib_8cpp.js
.github/workflows/: cmake.yml
docs/: header.html
include/testLib/: testLib.hpp
search/: all_0.js  all_1.js  all_3.js  all_4.js  files_0.js  files_2.js  functions_0.js  pages_0.js  searchdata.js
src/testApp/: CMakeLists.txt  kernel.cpp  kernel.hpp  main.cpp
src/testLib/: CMakeLists.txt  testLib.cpp
tests/testLibTests/: CMakeLists.txt  main.cpp  test.cpp
